Adicionado botão Whatsapp

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img src="img/slider/bg-1.jpg" alt="" />
+              <img src="img/slider/bg-3.jpg" alt="" />
               <div class="carousel-caption">
                 <h1>Soluções Ambientais<br />Para Você e o Mundo</h1>
                 <p>
@@ -157,7 +157,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/slider/bg-3.jpg" alt="" />
+              <img src="img/slider/bg-1.jpg" alt="" />
               <div class="carousel-caption">
                 <h1>Estrutura Diferenciada<br />de Gestão e Logística</h1>
                 <p>
@@ -230,7 +230,7 @@
             para que juntos possamos das um destino ecologicamente correto e
             melhor, aos resíduos recicláveis. <br />
             A partir de agora a Riccinarra Soluções Ambientais começa a agir com
-            você, em seu condomínio, passando dicas de como:
+            você, em seu condomínio, assim como nos nossos clientes:
           </p>
         </div>
       </div>
@@ -244,19 +244,19 @@
         <!-- Row and Scroller Wrapper Starts -->
         <div class="row" id="clients-scroller">
           <div class="client-item-wrapper">
-            <img src="img/clients/img1.png" alt="" />
+            <img style="max-width: 200px" src="img/clients/img1.png" alt="" />
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img2.png" alt="" />
+            <img style="max-width: 100px" src="img/clients/img2.jpeg" alt="" />
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img3.png" alt="" />
+            <img style="max-width: 170px" src="img/clients/img3.png" alt="" />
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img4.png" alt="" />
+            <img style="max-width: 170px" src="img/clients/img4.png" alt="" />
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img5.png" alt="" />
+            <img style="max-width: 130px" src="img/clients/img5.png" alt="" />
           </div>
           <div class="client-item-wrapper">
             <img src="img/clients/img6.png" alt="" />
@@ -411,7 +411,7 @@
                 Conheça um pouco mais sobre a Riccinarra e reciclagem.
               </p>
               <a
-                href="https://www.youtube.com/watch?v=r44RKWyfcFw"
+                href="https://www.youtube.com/watch?v=ZcymnW5NRYQ"
                 class="video-popup"
                 ><i class="lnr lnr-film-play"></i
               ></a>
@@ -590,47 +590,32 @@
             <div class="touch-slider owl-carousel owl-theme">
               <div class="testimonial-item">
                 <img
-                  src="img/testimonial/customer1.png"
+                  src="img/testimonial/carlos.png"
                   alt="Client Testimonoal"
                 />
                 <div class="testimonial-text">
                   <p>
-                    Morbi eget dictum enim. Praesent sed quam sit amet lorem
-                    tempor rhoncus. <br />In hac habitasse platea dictumst.
-                    Vivamus in accumsan ex
+                    Estamos ajudando diversos condomínios e empresas a fazerem a
+                    diferença para o meio ambiente. <br />Em contra partida eles
+                    ganham uma lixeira mais organizada e sustentável!
                   </p>
-                  <h3>Johnathan Doe</h3>
-                  <span>Marketing Head Matrix media</span>
+                  <h3>Carlos Narra</h3>
+                  <span>Fundador - Riccinarra</span>
                 </div>
               </div>
               <div class="testimonial-item">
                 <img
-                  src="img/testimonial/customer2.png"
+                  src="img/testimonial/regina.png"
                   alt="Client Testimonoal"
                 />
                 <div class="testimonial-text">
                   <p>
-                    Morbi eget dictum enim. Praesent sed quam sit amet lorem
-                    tempor rhoncus. <br />In hac habitasse platea dictumst.
-                    Vivamus in accumsan ex
+                    Estamos prontos para fazer a diferença, agende uma reunião
+                    para conhecer os nossos serviços. <br />Deixe para nós
+                    gerenciar a sua lixeira e logística de resíduos.
                   </p>
-                  <h3>Oidila Matik</h3>
-                  <span>President Lexo Inc</span>
-                </div>
-              </div>
-              <div class="testimonial-item">
-                <img
-                  src="img/testimonial/customer3.png"
-                  alt="Client Testimonoal"
-                />
-                <div class="testimonial-text">
-                  <p>
-                    Morbi eget dictum enim. Praesent sed quam sit amet lorem
-                    tempor rhoncus. <br />In hac habitasse platea dictumst.
-                    Vivamus in accumsan ex
-                  </p>
-                  <h3>- Alex Dattilo</h3>
-                  <span>CEO Optima Inc</span>
+                  <h3>Regina Ricci</h3>
+                  <span>Fundadora - Riccinarra</span>
                 </div>
               </div>
             </div>
@@ -862,8 +847,20 @@
     <!-- Footer Section End -->
 
     <!-- Go To Top Link -->
-    <a href="#" class="back-to-top">
+    <!-- <a href="#" class="back-to-top">
       <i class="lnr lnr-arrow-up"></i>
+    </a> -->
+
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+    <a
+      href="https://api.whatsapp.com/send?phone=5511947707967&text=Olá!%20Gostaria%20de%20saber%20mais%20dos%20serviços%20da%20Riccinarra%20😃"
+      class="float"
+      target="_blank"
+    >
+      <i class="fa fa-whatsapp my-float"></i>
     </a>
 
     <div id="loader">
