Alterado caminho das imagens

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 
         <div class="row justify-content-center">
           <div class="col-12" style="max-width: 1000px">
-            <img class="img-fluid" src="/img/trash.svg" />
+            <img class="img-fluid" src="img/trash.svg" />
           </div>
         </div>
       </div>
@@ -836,7 +836,7 @@
               <p>
                 Riccinarra &copy; Soluções Ambientais - Desenvolvido por
                 <a href="http://rexo.com.br/" target="_blank"
-                  ><img src="/img/logorexo.png"
+                  ><img src="img/logorexo.png"
                 /></a>
               </p>
             </div>
