Correções de Português

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <meta name="author" content="Grayrids" />
+    <meta name="author" content="Rexo" />
     <title>Riccinarra - Soluções Ambientais</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -205,32 +206,24 @@
           </h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s" />
           <p
-            class="section-subtitle wow fadeIn"
+            class="section-subtitle wow fadeIn text-justify-center"
             data-wow-duration="1000ms"
             data-wow-delay="0.3s"
           >
-            A Riccinarra Soluções Ambientais vem se apresentar aos condôminos,
-            para que juntos possamos das um destino ecologicamente correto e
-            melhor, aos resíduos recicláveis. <br />
-            Com a correria do dia a dia, procuramos facilidades para tornar
-            nossos dias mais prático, porém essa praticidade, tem um custo alto
-            para nós, e principalmente para o nosso ecossistema. Com a
-            modernidade e a estabilidade financeira, consumimos sem parar, do
-            palito de fósforo ao avião. E lá se vão inúmeros recursos naturais
-            que levaram anos a fio para se transformar no nosso meio ambiente. O
-            único jeito de ajudar a mãe natureza e usarmos a regra básica dos 3
-            R's.
-          </p>
-          <p
-            class="section-subtitle wow fadeIn"
-            data-wow-duration="1000ms"
-            data-wow-delay="0.3s"
-          >
-            A Riccinarra Soluções Ambientais vem se apresentar aos condôminos,
-            para que juntos possamos das um destino ecologicamente correto e
-            melhor, aos resíduos recicláveis. <br />
-            A partir de agora a Riccinarra Soluções Ambientais começa a agir com
-            você, em seu condomínio, assim como nos nossos clientes:
+            A Riccinarra Soluções Ambientais traz soluções para gestão de
+            lixeiras e coleta para condôminos e empresas, para que juntos
+            possamos dar um destino ecologicamente correto e melhor, aos
+            resíduos recicláveis. Com a correria do dia a dia, procuramos
+            facilidades para tornar nossos dias mais práticos, porém essa
+            praticidade tem um custo alto para nós e principalmente para o nosso
+            ecossistema. Com a modernidade e a estabilidade financeira,
+            consumimos sem parar, do palito de fósforo ao avião. E lá se vão
+            inúmeros recursos naturais que levaram anos a fio para se
+            transformar no nosso meio ambiente. A melhor forma de ajudar a mãe
+            natureza é usando a regra básica dos 3 R's. Não deixe de fazer assim
+            como os nossos mais de 17 clientes, leve para você e sua empresa a
+            mão de obra mais qualificada em reciclagem de São Paulo. Alguns dos
+            nossos clientes:
           </p>
         </div>
       </div>
@@ -330,7 +323,7 @@
                   <i class="fa fa-map"></i>
                 </span>
                 <div class="text">
-                  <h4>Logistica de Reciclagem</h4>
+                  <h4>Logística de Reciclagem</h4>
                   <p>
                     Gerenciamos toda a logística de lixeiras em condomínios e
                     empresas.
@@ -431,8 +424,7 @@
           <hr class="lines" />
           <p class="section-subtitle">
             A Riccinarra gerencia os mais complexos desafios de coleta e
-            reciclagem de resíduos.<br />
-            Veja alguns dos trabalhos que fazemos juntos aos nossos clientes.
+            reciclagem de resíduos.
           </p>
         </div>
         <div class="row">
