--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       >
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="img/logo.png" alt=""
+            ><img src="img/logotop.png" alt=""
           /></a>
           <button
             class="navbar-toggler"
@@ -210,54 +210,21 @@
             data-wow-duration="1000ms"
             data-wow-delay="0.3s"
           >
-            A Riccinarra Soluções Ambientais traz soluções para gestão de
-            lixeiras e coleta para condôminos e empresas, para que juntos
+            <br />
+            A Riccinarra Soluções Ambientais vem se apresentar para que juntos
             possamos dar um destino ecologicamente correto e melhor, aos
             resíduos recicláveis. Com a correria do dia a dia, procuramos
-            facilidades para tornar nossos dias mais práticos, porém essa
-            praticidade tem um custo alto para nós e principalmente para o nosso
-            ecossistema. Com a modernidade e a estabilidade financeira,
+            facilidades para tornar nossos dias mais prático, porém essa
+            praticidade, tem um custo alto para nós, e principalmente para o
+            nosso ecossistema. Com a modernidade e a estabilidade financeira,
             consumimos sem parar, do palito de fósforo ao avião. E lá se vão
             inúmeros recursos naturais que levaram anos a fio para se
-            transformar no nosso meio ambiente. A melhor forma de ajudar a mãe
-            natureza é usando a regra básica dos 3 R's. Não deixe de fazer assim
-            como os nossos mais de 17 clientes, leve para você e sua empresa a
-            mão de obra mais qualificada em reciclagem de São Paulo. Alguns dos
-            nossos clientes:
+            transformar no nosso meio ambiente.
           </p>
         </div>
       </div>
     </section>
     <!-- Services Section End -->
-
-    <!-- Clients Section -->
-    <div id="clients" class="section pt-0 mt-0">
-      <!-- Container Ends -->
-      <div class="container">
-        <!-- Row and Scroller Wrapper Starts -->
-        <div class="row" id="clients-scroller">
-          <div class="client-item-wrapper">
-            <img style="max-width: 200px" src="img/clients/img1.png" alt="" />
-          </div>
-          <div class="client-item-wrapper">
-            <img style="max-width: 100px" src="img/clients/img2.jpeg" alt="" />
-          </div>
-          <div class="client-item-wrapper">
-            <img style="max-width: 170px" src="img/clients/img3.png" alt="" />
-          </div>
-          <div class="client-item-wrapper">
-            <img style="max-width: 170px" src="img/clients/img4.png" alt="" />
-          </div>
-          <div class="client-item-wrapper">
-            <img style="max-width: 130px" src="img/clients/img5.png" alt="" />
-          </div>
-          <div class="client-item-wrapper">
-            <img src="img/clients/img6.png" alt="" />
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Client Section End -->
 
     <!-- Download Section Start -->
     <section id="download" class="section">
@@ -287,8 +254,7 @@
           <h2 class="section-title">Nossos <span>Serviços</span></h2>
           <hr class="lines" />
           <p class="section-subtitle">
-            De que forma podemos ajudar a você e a sua empresa?<br />
-            Descubra todos os nossos serviços e junte-se ao meio ambiente!
+            Descubra todos os nossos serviços e junte-se a nós!
           </p>
         </div>
         <div class="row">
@@ -301,20 +267,20 @@
                 <div class="text">
                   <h4>Coleta de Resíduos</h4>
                   <p>
-                    Fazemos a coleta e logística de resíduos em condomínios,
-                    empresas e residências.
+                    Fazemos a coleta e logística de resíduos recicláveis em
+                    condomínios, empresas e residências.
                   </p>
                 </div>
               </div>
-              <div class="box-item left">
+              <div class="box-item right">
                 <span class="icon">
-                  <i class="fa fa-trash"></i>
+                  <i class="fa fa-wrench"></i>
                 </span>
                 <div class="text">
-                  <h4>Destinamento Sustentável</h4>
+                  <h4>Mão de Obra</h4>
                   <p>
-                    Após a recuperação e o aproveitamento energético nós fazemos
-                    a disposição final.
+                    Oferecemos mão de obra especializada para projetar estrutras
+                    de coleta.
                   </p>
                 </div>
               </div>
@@ -344,22 +310,22 @@
                   <i class="fa fa-building"></i>
                 </span>
                 <div class="text">
-                  <h4>Resíduos de Obras</h4>
+                  <h4>Resíduos</h4>
                   <p>
                     Atuamos em obras ajudando construtoras a reduzir seu impacto
                     ambiental.
                   </p>
                 </div>
               </div>
-              <div class="box-item right">
+              <div class="box-item left">
                 <span class="icon">
-                  <i class="fa fa-wrench"></i>
+                  <i class="fa fa-trash"></i>
                 </span>
                 <div class="text">
-                  <h4>Mão de Obra</h4>
+                  <h4>Destino dos Resíduos</h4>
                   <p>
-                    Oferecemos mão de obra especializada para projetar estrutras
-                    de coleta.
+                    Após a separação e recuperação segue para a indústria para o
+                    seu reaproveitamento.
                   </p>
                 </div>
               </div>
@@ -368,7 +334,7 @@
                   <i class="fa fa-car"></i>
                 </span>
                 <div class="text">
-                  <h4>Transporte Executivo</h4>
+                  <h4>Transporte Adequado</h4>
                   <p>
                     Para os mais elevados padrões temos veículos apropriados
                     para cada coleta.
@@ -531,7 +497,7 @@
                 <i class="lnr lnr-trash"></i>
               </div>
               <div class="fact-count">
-                <h3><span class="counter">7762</span>Kg</h3>
+                <h3><span class="counter">70000</span>T</h3>
                 <h4>Resíduos Reciclados</h4>
               </div>
             </div>
@@ -542,7 +508,7 @@
                 <i class="lnr lnr-calendar-full"></i>
               </div>
               <div class="fact-count">
-                <h3><span class="counter">20</span></h3>
+                <h3><span class="counter">22</span></h3>
                 <h4>Anos de Experiência</h4>
               </div>
             </div>
@@ -582,21 +548,6 @@
             <div class="touch-slider owl-carousel owl-theme">
               <div class="testimonial-item">
                 <img
-                  src="img/testimonial/carlos.png"
-                  alt="Client Testimonoal"
-                />
-                <div class="testimonial-text">
-                  <p>
-                    Estamos ajudando diversos condomínios e empresas a fazerem a
-                    diferença para o meio ambiente. <br />Em contra partida eles
-                    ganham uma lixeira mais organizada e sustentável!
-                  </p>
-                  <h3>Carlos Narra</h3>
-                  <span>Fundador - Riccinarra</span>
-                </div>
-              </div>
-              <div class="testimonial-item">
-                <img
                   src="img/testimonial/regina.png"
                   alt="Client Testimonoal"
                 />
@@ -604,7 +555,10 @@
                   <p>
                     Estamos prontos para fazer a diferença, agende uma reunião
                     para conhecer os nossos serviços. <br />Deixe para nós
-                    gerenciar a sua lixeira e logística de resíduos.
+                    gerenciar a sua lixeira e logística de resíduos. Estamos
+                    ajudando diversos condomínios e empresas a fazerem a
+                    diferença para o meio ambiente. Em contra partida eles
+                    ganham uma lixeira mais organizada e sustentável!
                   </p>
                   <h3>Regina Ricci</h3>
                   <span>Fundadora - Riccinarra</span>
@@ -678,7 +632,52 @@
     </section>
     <!-- Team section End -->
 
-    <section id="team" class="section mt-0 pt-0">
+    <!-- Clients Section -->
+    <section id="clients" class="section pb-4">
+      <!-- Container Ends -->
+      <div class="container">
+        <!-- Row and Scroller Wrapper Starts -->
+        <div class="section-header">
+          <h2
+            class="section-title wow fadeIn"
+            data-wow-duration="1000ms"
+            data-wow-delay="0.3s"
+          >
+            Nossos <span>Clientes</span>
+          </h2>
+          <hr class="lines wow zoomIn" data-wow-delay="0.3s" />
+          <br />
+          <br />
+          <div class="row" id="clients-scroller">
+            <div class="client-item-wrapper">
+              <img style="max-width: 200px" src="img/clients/img1.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img
+                style="max-width: 100px"
+                src="img/clients/img2.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="client-item-wrapper">
+              <img style="max-width: 170px" src="img/clients/img3.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img style="max-width: 170px" src="img/clients/img4.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img style="max-width: 130px" src="img/clients/img5.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img src="img/clients/img6.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Client Section End -->
+
+    <section id="team" class="section mt-200 pt-200">
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">As <span>Cores</span> da Reciclagem</h2>
@@ -686,12 +685,12 @@
           <p class="section-subtitle" style="text-align: justify-center">
             Segundo Conselho Nacional de Meio Ambiente (CONAMA), existe uma
             padronização internacional de dez cores de lixeiras para cada tipo
-            de resíduo que facilitam o descarte correto. Azul: papel/papelão;
-            Vermelho: plástico; Verde: vidro; Amarelo: metal; Preto: madeira;
-            Laranja: resíduos perigosos (como pilhas e baterias); Branco:
-            resíduos de hospitais e serviço de saúde; Roxo: lixo radioativo;
-            Marrom: lixo orgânico; Cinza: lixo não reciclável, contaminado ou
-            cuja separação não é possível.
+            de resíduo que facilitam o descarte correto. Vermelho: plástico;
+            Laranja: resíduos perigosos (como pilhas e baterias); Amarelo:
+            metal; Verde: vidro; Azul: papel/papelão; Marrom: lixo orgânico;
+            Branco: resíduos de hospitais e serviço de saúde; Roxo: lixo
+            radioativo; Cinza: lixo não reciclável, contaminado ou cuja
+            separação não é possível; Preto: madeira.
           </p>
         </div>
 
