--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
             <div class="carousel-item active">
               <img src="img/slider/bg-3.jpg" alt="" />
               <div class="carousel-caption">
-                <h1>Soluções Ambientais<br />Para Você e o Mundo</h1>
+                <h1>
+                  Soluções Ambientais para <br />
+                  Você e o Mundo
+                </h1>
                 <p>
                   Pensamos em uma comunidade, onde podemos ser o seu meio de
                   fazer um ambiente melhor para todos.
@@ -226,26 +229,51 @@
     </section>
     <!-- Services Section End -->
 
-    <!-- Download Section Start -->
-    <section id="download" class="section">
+    <!-- Clients Section -->
+    <section id="clients" class="section pb-4">
+      <!-- Container Ends -->
       <div class="container">
+        <!-- Row and Scroller Wrapper Starts -->
         <div class="section-header">
-          <h2 class="section-title">
-            Realizamos a <span>Reciclagem</span> para você!
+          <h2
+            class="section-title wow fadeIn"
+            data-wow-duration="1000ms"
+            data-wow-delay="0.3s"
+          >
+            Nossos <span>Clientes</span>
           </h2>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="download-area text-center">
-              <a href="#contact" class="btn btn-border"
-                ><i class="fa fa-phone"></i>Entre em Contato</a
-              >
+          <hr class="lines wow zoomIn" data-wow-delay="0.3s" />
+          <br />
+          <br />
+
+          <div class="row" id="clients-scroller">
+            <div class="client-item-wrapper">
+              <img style="max-width: 200px" src="img/clients/img1.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img
+                style="max-width: 100px"
+                src="img/clients/img2.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="client-item-wrapper">
+              <img style="max-width: 170px" src="img/clients/img3.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img style="max-width: 170px" src="img/clients/img4.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img style="max-width: 130px" src="img/clients/img5.png" alt="" />
+            </div>
+            <div class="client-item-wrapper">
+              <img src="img/clients/img6.png" alt="" />
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Download Section End -->
+    <!-- Client Section End -->
 
     <!-- Features Section Start -->
     <section id="features" class="section" data-stellar-background-ratio="0.2">
@@ -305,18 +333,6 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <div class="content-right text-left">
-              <div class="box-item right">
-                <span class="icon">
-                  <i class="fa fa-building"></i>
-                </span>
-                <div class="text">
-                  <h4>Resíduos</h4>
-                  <p>
-                    Atuamos em obras ajudando construtoras a reduzir seu impacto
-                    ambiental.
-                  </p>
-                </div>
-              </div>
               <div class="box-item left">
                 <span class="icon">
                   <i class="fa fa-trash"></i>
@@ -326,6 +342,18 @@
                   <p>
                     Após a separação e recuperação segue para a indústria para o
                     seu reaproveitamento.
+                  </p>
+                </div>
+              </div>
+              <div class="box-item right">
+                <span class="icon">
+                  <i class="fa fa-building"></i>
+                </span>
+                <div class="text">
+                  <h4>Resíduos</h4>
+                  <p>
+                    Atuamos em obras ajudando construtoras a reduzir seu impacto
+                    ambiental.
                   </p>
                 </div>
               </div>
@@ -348,38 +376,26 @@
     </section>
     <!-- Features Section End -->
 
-    <!-- Start Video promo Section -->
-    <section class="video-promo section" data-stellar-background-ratio="0.5">
-      <div class="overlay"></div>
+    <!-- Download Section Start -->
+    <section id="download" class="section">
       <div class="container">
+        <div class="section-header">
+          <h2 class="section-title">
+            Realizamos a <span>Reciclagem</span> para você!
+          </h2>
+        </div>
         <div class="row">
-          <div class="col-md-12 col-sm-12">
-            <div class="video-promo-content text-center">
-              <h2
-                class="wow zoomIn"
-                data-wow-duration="1000ms"
-                data-wow-delay="100ms"
+          <div class="col-md-12">
+            <div class="download-area text-center">
+              <a href="#contact" class="btn btn-border"
+                ><i class="fa fa-phone"></i>Entre em Contato</a
               >
-                Veja o nosso vídeo
-              </h2>
-              <p
-                class="wow zoomIn"
-                data-wow-duration="1000ms"
-                data-wow-delay="100ms"
-              >
-                Conheça um pouco mais sobre a Riccinarra e reciclagem.
-              </p>
-              <a
-                href="https://www.youtube.com/watch?v=ZcymnW5NRYQ"
-                class="video-popup"
-                ><i class="lnr lnr-film-play"></i
-              ></a>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- End Video Promo Section -->
+    <!-- Download Section End -->
 
     <!-- Portfolio Section -->
     <section id="portfolios" class="section">
@@ -632,50 +648,38 @@
     </section>
     <!-- Team section End -->
 
-    <!-- Clients Section -->
-    <section id="clients" class="section pb-4">
-      <!-- Container Ends -->
+    <!-- Start Video promo Section -->
+    <section class="video-promo section" data-stellar-background-ratio="0.5">
+      <div class="overlay"></div>
       <div class="container">
-        <!-- Row and Scroller Wrapper Starts -->
-        <div class="section-header">
-          <h2
-            class="section-title wow fadeIn"
-            data-wow-duration="1000ms"
-            data-wow-delay="0.3s"
-          >
-            Nossos <span>Clientes</span>
-          </h2>
-          <hr class="lines wow zoomIn" data-wow-delay="0.3s" />
-          <br />
-          <br />
-          <div class="row" id="clients-scroller">
-            <div class="client-item-wrapper">
-              <img style="max-width: 200px" src="img/clients/img1.png" alt="" />
-            </div>
-            <div class="client-item-wrapper">
-              <img
-                style="max-width: 100px"
-                src="img/clients/img2.jpeg"
-                alt=""
-              />
-            </div>
-            <div class="client-item-wrapper">
-              <img style="max-width: 170px" src="img/clients/img3.png" alt="" />
-            </div>
-            <div class="client-item-wrapper">
-              <img style="max-width: 170px" src="img/clients/img4.png" alt="" />
-            </div>
-            <div class="client-item-wrapper">
-              <img style="max-width: 130px" src="img/clients/img5.png" alt="" />
-            </div>
-            <div class="client-item-wrapper">
-              <img src="img/clients/img6.png" alt="" />
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+            <div class="video-promo-content text-center">
+              <h2
+                class="wow zoomIn"
+                data-wow-duration="1000ms"
+                data-wow-delay="100ms"
+              >
+                Veja o nosso vídeo
+              </h2>
+              <p
+                class="wow zoomIn"
+                data-wow-duration="1000ms"
+                data-wow-delay="100ms"
+              >
+                Conheça um pouco mais sobre a Riccinarra e reciclagem.
+              </p>
+              <a
+                href="https://www.youtube.com/watch?v=ZcymnW5NRYQ"
+                class="video-popup"
+                ><i class="lnr lnr-film-play"></i
+              ></a>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Client Section End -->
+    <!-- End Video Promo Section -->
 
     <section id="team" class="section mt-200 pt-200">
       <div class="container">
@@ -694,9 +698,157 @@
           </p>
         </div>
 
-        <div class="row justify-content-center">
-          <div class="col-12" style="max-width: 1000px">
-            <img class="img-fluid" src="img/trash.svg" />
+        <div class="row">
+          <div class="col-sm-12">
+            <div id="customers-testimonials" class="owl-carousel">
+              <!--TESTIMONIAL 1 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Vermelho.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Plástico</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 1 -->
+
+              <!--TESTIMONIAL 2 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Laranja.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Resíduos Perigosos</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 2 -->
+
+              <!--TESTIMONIAL 3 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Amarelo.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Metal</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 3 -->
+
+              <!--TESTIMONIAL 4 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Verde.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Vidro</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 4 -->
+
+              <!--TESTIMONIAL 5 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Azul.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Papel/Papelão</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 5 -->
+              <!--TESTIMONIAL 6 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Marrom.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Lixo Orgânico</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 6 -->
+              <!--TESTIMONIAL 7 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Branco.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">
+                      Resíduos de Hospitais <br />
+                      Serviço de Saúde
+                    </h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 7 -->
+              <!--TESTIMONIAL 8 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Roxo.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Lixo Radioativo</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 8 -->
+              <!--TESTIMONIAL 9 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Cinza.svg"
+                    width="30%"
+                  />
+                  <div class="item-details" aling>
+                    <h5 class="text-center">Lixo Não Reciclável</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 9 -->
+              <!--TESTIMONIAL 10 -->
+              <div class="item">
+                <div class="shadow-effect">
+                  <img
+                    class="img-fluid"
+                    src="img/lixeiras/Preto.svg"
+                    width="30%"
+                  />
+                  <div class="item-details">
+                    <h5 class="text-center">Madeira</h5>
+                  </div>
+                </div>
+              </div>
+              <!--END OF TESTIMONIAL 10 -->
+            </div>
           </div>
         </div>
       </div>
