--- a/index.html
+++ b/index.html
@@ -922,6 +922,17 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mix development">
+              <div class="portfolio-item">
+                <div class="shot-item">
+                  <a class="overlay lightbox" href="img/portfolio/20.jpg">
+                    <img src="img/portfolio/20.jpg" alt="" />
+                    <i class="lnr lnr-plus-circle item-icon"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
